--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </li>
                 <li>
                   <div class="btn-group navbar-btn">
-                        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">Select an Account<span class="caret"></span></a>
+                        <a class=" dropdown-toggle" data-toggle="dropdown" href="#">Günler<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Hollywood Account</a></li>
                         <li><a href="#">Another Account</a></li>
