--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hakkımda | Erdem İnanç</title>
+    <title>Hakkımda | Enes Talha Akıncı</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Erdem İnanç</a>
+                <a class="navbar-brand" href="index.html">Enes Talha Akıncı</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
