--- a/index.html
+++ b/index.html
@@ -136,39 +136,15 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
                         <li>
-                            <a href="http://twitter.com/erdeminanc">
+                            <a href="https://twitter.com/e_akinci">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
-                        <li>
-                            <a href="http://twitter.com/erdeminanc">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://instagram.com/erdeminanc">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/erdeminanc/">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
                     </ul>
-                    <p class="copyright text-muted">Tüm hakları saklıdır. &copy; Erdem İnanç Özyeğin Üniversitesi Lise Yaz Okulu 2017</p>
+                    <p class="copyright text-muted">Tüm hakları saklıdır. &copy; Enes Talha Akıncı Özyeğin Üniversitesi Lise Yaz Okulu 2017</p>
                 </div>
             </div>
         </div>
