--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a href="about.html">Hakkımda</a>
                     </li>
                 <li>
-                  <div class="btn-group navbar-btn">
+                  <div class="btn-group navbar-btn gun">
                         <a class=" dropdown-toggle" data-toggle="dropdown" href="#">Günler<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Hollywood Account</a></li>
