--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <li><a href="#">Another Account</a></li>
                         <li><a href="#">Yet another Account</a></li>
                     </ul>
+                   </div>   
                 </li>
                     
                     
