--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                 <img src="" class="pull-right">
                 <p>Adım Enes Talha Akıncı. 16 yaşındayım ve İstanbul Atatürk Fen Lisesi'nde 11. sınıf öğrencisiyim. Şu anda Özyeğin Üniversitesi LYO'da Maker Programındayım.</p>
                 <p>Bu programı seçmemin sebebi ise küçüklüğümden beri bilgisayarlara ve üretmeye olan merakım. Bu ikisini birleştiren bir program olduğunu görünce 
-                dayanamadım ve her geçen buraya gelmeye değdiğini düşünüyorum. </p>
+                dayanamadım ve her geçen gün buraya gelmeye değdiğini düşünüyorum. </p>
             </div>
         </div>
     </div>
