--- a/post2.html
+++ b/post2.html
@@ -35,7 +35,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Erdem İnanç</a>
+                <a class="navbar-brand" href="index.html">Enes Talha Akıncı</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,7 +47,16 @@
                     <li>
                         <a href="about.html">Hakkımda</a>
                     </li>
-                
+                    <li>
+                  <div class="btn-group navbar-btn gun">
+                        <a class=" dropdown-toggle" data-toggle="dropdown" href="#">Günler<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="post1.html">1. Gün</a></li>
+                        <li><a href="post2.html">2. Gün</a></li>
+                     </ul>
+                   </div>   
+                </li>
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -126,39 +135,15 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
                         <li>
-                            <a href="http://twitter.com/erdeminanc">
+                            <a href="http://twitter.com/e_akinci">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
-                        <li>
-                            <a href="http://twitter.com/erdeminanc">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://instagram.com/erdeminanc">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/erdeminanc/">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
                     </ul>
-                    <p class="copyright text-muted">Tüm hakları saklıdır. &copy; Erdem İnanç Özyeğin Üniversitesi Lise Yaz Okulu 2017</p>
+                    <p class="copyright text-muted">Tüm hakları saklıdır. &copy; Enes Talha Akıncı Özyeğin Üniversitesi Lise Yaz Okulu 2017</p>
                 </div>
             </div>
         </div>
