--- a/about.html
+++ b/about.html
@@ -60,6 +60,11 @@
                     <ul class="dropdown-menu">
                         <li><a href="post1.html">1. Gün</a></li>
                         <li><a href="post2.html">2. Gün</a></li>
+                        <li><a href="post3.html">3. Gün</a></li>
+                        <li><a href="post4.html">4. Gün</a></li>
+                        <li><a href="post5.html">5. Gün</a></li>
+                        <li><a href="post6.html">6. Gün</a></li>
+                        <li><a href="post7.html">7. Gün</a></li>
                     </ul>
                    </div>   
                 </li>
