--- a/post2.html
+++ b/post2.html
@@ -47,13 +47,18 @@
                     <li>
                         <a href="about.html">Hakkımda</a>
                     </li>
-                    <li>
+                   <li>
                   <div class="btn-group navbar-btn gun">
                         <a class=" dropdown-toggle" data-toggle="dropdown" href="#">Günler<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="post1.html">1. Gün</a></li>
                         <li><a href="post2.html">2. Gün</a></li>
-                     </ul>
+                        <li><a href="post3.html">3. Gün</a></li>
+                        <li><a href="post4.html">4. Gün</a></li>
+                        <li><a href="post5.html">5. Gün</a></li>
+                        <li><a href="post6.html">6. Gün</a></li>
+                        <li><a href="post7.html">7. Gün</a></li>
+                    </ul>
                    </div>   
                 </li>
                     
