--- a/post3.html
+++ b/post3.html
@@ -45,7 +45,7 @@
                         <a href="index.html">Anasayfa</a>
                     </li>
                     <li>
-                        <a href="about.html">Hakkýmda</a>
+                        <a href="about.html">Hakkımda</a>
                     </li>
                     <li>
                   <div class="btn-group navbar-btn gun">
@@ -80,7 +80,7 @@
                         <h1>3.Gün: Arduino Atölyesi</h1>
                         <h2 class="subheading">Lorem ipsum dolor amet consectetur adipiscing otur.
                         </h2>
-                        <span class="meta">4 Temmuz 2017 tarihinde <a href="#">Erdem Ýnanç </a>tarafýndan paylaþýldý.</span>
+                        <span class="meta">11 Temmuz 2017 tarihinde <a href="#">Enes Talha Akıncı </a>tarafından paylaşıldı.</span>
                     </div>
                 </div>
                 <div class="col-md-3">
