--- a/post5.html
+++ b/post5.html
@@ -35,7 +35,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Enes Talha Akýncý</a>
+                <a class="navbar-brand" href="index.html">Enes Talha Akıncı</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,7 +45,7 @@
                         <a href="index.html">Anasayfa</a>
                     </li>
                     <li>
-                        <a href="about.html">Hakkýmda</a>
+                        <a href="about.html">Hakkımda</a>
                     </li>
                     <li>
                   <div class="btn-group navbar-btn gun">
@@ -80,7 +80,7 @@
                         <h1>5.Gün: 3D Modelleme ve 3D Yazıcılar</h1>
                         <h2 class="subheading">Lorem ipsum dolor amet consectetur adipiscing otur.
                         </h2>
-                        <span class="meta">4 Temmuz 2017 tarihinde <a href="#">Erdem Ýnanç </a>tarafýndan paylaþýldý.</span>
+                        <span class="meta">11 Temmuz 2017 tarihinde <a href="#">Enes Talha Akıncı</a>tarafından paylaşıldı.</span>
                     </div>
                 </div>
                 <div class="col-md-3">
