--- a/post7.html
+++ b/post7.html
@@ -79,7 +79,7 @@
                         <h1>7.Gün: Raspberry Pi Atölye</h1>
                         <h2 class="subheading">Lorem ipsum dolor amet consectetur adipiscing otur.
                         </h2>
-                        <span class="meta">4 Temmuz 2017 tarihinde <a href="#">Erdem Ýnanç </a>tarafýndan paylaþýldý.</span>
+                        <span class="meta">11 Temmuz 2017 tarihinde <a href="#">Enes Talha Akıncı </a>tarafından paylaşıldı.</span>
                     </div>
                 </div>
                 <div class="col-md-3">
