--- a/post1.html
+++ b/post1.html
@@ -82,7 +82,7 @@
                         <h1>1.Gün: Girişimcilik ve Web Tasarım</h1>
                         <h2 class="subheading">Lorem ipsum dolor amet consectetur adipiscing otur.
                         </h2>
-                        <span class="meta">4 Temmuz 2017 tarihinde <a href="#">Erdem İnanç </a>tarafından paylaşıldı.</span>
+                        <span class="meta">4 Temmuz 2017 tarihinde <a href="#">Enes Talha Akıncı </a>tarafından paylaşıldı.</span>
                     </div>
                 </div>
                 <div class="col-md-3">
