--- a/post2.html
+++ b/post2.html
@@ -79,7 +79,7 @@
                         <h1>2. Gün: Elektronik Prototipleme</h1>
                         <h2 class="subheading">Lorem ipsum dolor amet consectetur adipiscing otur.
                         </h2>
-                        <span class="meta">5 Mayıs 2017 tarihinde <a href="#">Erdem İnanç </a>tarafından paylaşıldı.</span>
+                        <span class="meta">5 Mayıs 2017 tarihinde <a href="#">Enes Talha Akıncı </a>tarafından paylaşıldı.</span>
                     </div>
                 </div>
                 <div class="col-md-3">
