--- a/post6.html
+++ b/post6.html
@@ -149,7 +149,8 @@
                         </li>
                         
                     </ul>
-                    <p class="copyright text-muted">Tüm haklarý saklýdýr. &copy; Enes Talha Akýncý Özyeðin Üniversitesi Lise Yaz Okulu 2017</p>
+                    <p class="copyright text-muted">Tüm hakları saklıdır. &copy; Enes Talha Akıncı Özyeğin Üniversitesi Lise Yaz Okulu 2017</p>
+                </div>
                 </div>
             </div>
         </div>
